Add openapi spec (#15)
